fix: scrollbar glitch on rerender (commented out while finding a glitchless solution to implement custom css scrollbar)

--- a/src/index.css
+++ b/src/index.css
@@ -61,23 +61,24 @@ textarea {
   font-size: 16px;
 }
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   border-radius: 10px;
   background-color: #F5F5F5;
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
+   width: 12px; 
+   background-color: #F5F5F5; 
+   position: absolute;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-  background-color: rgb(212, 212, 212);
-}
+  background-color: black
+} */
 
 .mde-preview, .mde-preview-content, .mde-preview-content>p {
   word-break: break-all;
